--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
   "hello": "Hello,",
+  "global_title": "Miao Miao Admin",
   "github": "Github Pages",
   "logout": "Logout",
   "router.home": "Home",
@@ -16,5 +17,30 @@
   "router.iframe": "Iframe",
   "router.vue": "Vue.js",
   "router.i18n": "i18n",
-  "router.i18nTest": "i18n Test"
+  "router.i18nTest": "i18n Test",
+  "page.common.btn.search": "Search",
+  "page.common.btn.reset": "Reset",
+  "page.common.btn.edit": "Edit",
+  "page.common.btn.delete": "Delete",
+  "page.common.btn.delete_popover": "Are you sure to delete this item?",
+  "page.common.btn.confirm": "Confirm",
+  "page.common.btn.cancel": "Cancel",
+  "page.common.title.edit": "Edit",
+  "page.common.title.add": "Add",
+  "page.common.notice.set_url_list": "Please set the url list property",
+  "page.common.notice.set_url_delete": "Please set the url delete property",
+  "page.common.notice.delete_success": "Delete success!",
+  "page.common.notice.submit_success": "Submit success!",
+  "page.common.design.article.search.title": "Title",
+  "page.common.design.article.search.content": "Content",
+  "page.common.design.article.search.title_placeholder": "Please Input Title",
+  "page.common.design.article.search.content_placeholder": "Please Input Content",
+  "page.common.design.article.column.id": "ID",
+  "page.common.design.article.column.title": "Title",
+  "page.common.design.article.column.content": "Content",
+  "page.common.design.article.column.action": "Action",
+  "page.common.design.article.form.title": "Title",
+  "page.common.design.article.form.content": "Content",
+  "page.common.design.article.form.title_placeholder": "Please Input Title",
+  "page.common.design.article.form.content_placeholder": "Please Input Content"
 }
