--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,5 +1,6 @@
 {
   "hello": "你好，",
+  "global_title": "喵喵App管理系统",
   "github": "Github 仓库",
   "logout": "退出登录",
   "router.home": "首页",
@@ -16,5 +17,31 @@
   "router.iframe": "内嵌页面",
   "router.vue": "Vue.js",
   "router.i18n": "国际化",
-  "router.i18nTest": "国际化测试"
+  "router.i18nTest": "国际化测试",
+  "page.common.btn.search": "搜索",
+  "page.common.btn.reset": "重置",
+  "page.common.btn.edit": "编辑",
+  "page.common.btn.delete": "删除",
+  "page.common.btn.delete_popover": "确认删除该记录？",
+  "page.common.btn.confirm": "确认",
+  "page.common.btn.cancel": "取消",
+  "page.common.title.edit": "编辑",
+  "page.common.title.add": "新增",
+  "page.common.notice.set_url_list": "请设置url.list属性",
+  "page.common.notice.set_url_delete": "请设置url.delete属性",
+  "page.common.notice.delete_success": "删除成功！",
+  "page.common.notice.submit_success": "提交成功！",
+  "page.common.design.article.search.title": "标题",
+  "page.common.design.article.search.content": "内容",
+  "page.common.design.article.search.title_placeholder": "请输入标题",
+  "page.common.design.article.search.content_placeholder": "请输入内容",
+  "page.common.design.article.column.id": "ID",
+  "page.common.design.article.column.title": "标题",
+  "page.common.design.article.column.content": "标题",
+  "page.common.design.article.column.action": "操作",
+  "page.common.design.article.form.title": "标题",
+  "page.common.design.article.form.content": "内容",
+  "page.common.design.article.form.title_placeholder": "请输入标题",
+  "page.common.design.article.form.content_placeholder": "请输入内容"
+
 }
