feat: 添加路由层级支持

--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,9 @@
   "router.vue": "Vue.js",
   "router.i18n": "i18n",
   "router.i18nTest": "i18n Test",
+  "router.nested": "Nested",
+  "router.level1": "Level 1",
+  "router.level2": "Level 2",
   "page.common.btn.search": "Search",
   "page.common.btn.reset": "Reset",
   "page.common.btn.edit": "Edit",
