--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -18,6 +18,9 @@
   "router.vue": "Vue.js",
   "router.i18n": "国际化",
   "router.i18nTest": "国际化测试",
+  "router.nested": "层级嵌套",
+  "router.level1": "层级 1",
+  "router.level2": "层级 2",
   "page.common.btn.search": "搜索",
   "page.common.btn.reset": "重置",
   "page.common.btn.edit": "编辑",
