chore: 时间线组件重构

--- a/locales/en.json
+++ b/locales/en.json
@@ -48,6 +48,7 @@
   "page.common.design.article.form.content_placeholder": "Please Input Content",
   "page.common.dashboard.card.leaderboard": "Leaderboard",
   "page.common.dashboard.card.timeline": "Timeline",
+  "page.common.dashboard.card.timeline.woops": "Woops,",
   "page.common.dashboard.card.coda": "Coda Duck Quotes",
   "page.common.dashboard.card.percentage": "Percentage of pet categories",
   "page.common.dashboard.card.pixie": "Pixie Data",
