--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -48,6 +48,7 @@
   "page.common.design.article.form.content_placeholder": "请输入内容",
   "page.common.dashboard.card.leaderboard": "排行榜",
   "page.common.dashboard.card.timeline": "时间线",
+  "page.common.dashboard.card.timeline.woops": "糟糕，",
   "page.common.dashboard.card.coda": "可达鸭行情",
   "page.common.dashboard.card.percentage": "宠物类别占比",
   "page.common.dashboard.card.pixie": "小精灵数据",
