--- a/locales/en.json
+++ b/locales/en.json
@@ -55,7 +55,7 @@
   "page.common.dashboard.card.timeline": "Timeline",
   "page.common.dashboard.card.timeline.woops": "Woops,",
   "page.common.dashboard.card.coda": "Coda Duck Quotes",
-  "page.common.dashboard.card.percentage": "Percentage of pet category",
+  "page.common.dashboard.card.percentage": "Percentage of pet categories",
   "page.common.dashboard.card.pixie": "Pixie Data",
   "page.common.dashboard.column.leaderboard.name": "Name",
   "page.common.dashboard.column.leaderboard.price": "Price",
