--- a/locales/en.json
+++ b/locales/en.json
@@ -26,6 +26,9 @@
   "router.nested": "Nested",
   "router.level1": "Level 1",
   "router.level2": "Level 2",
+  "router.permission": "Permission Pages",
+  "router.normal": "Normal Permission",
+  "router.extra": "Extra Permission",
   "page.common.btn.search": "Search",
   "page.common.btn.reset": "Reset",
   "page.common.btn.edit": "Edit",
