--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -26,6 +26,9 @@
   "router.nested": "层级嵌套",
   "router.level1": "层级 1",
   "router.level2": "层级 2",
+  "router.permission": "权限页面",
+  "router.normal": "普通权限",
+  "router.extra": "额外权限",
   "page.common.btn.search": "搜索",
   "page.common.btn.reset": "重置",
   "page.common.btn.edit": "编辑",
