--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -5,6 +5,8 @@
   "golbal.welcome.message.hello_afternoon_01": "中午好",
   "golbal.welcome.message.hello_afternoon_02": "下午好",
   "golbal.welcome.message.hello_evening": "晚上好",
+  "golbal.logout.message.confirm": "是否确认退出系统？",
+  "golbal.logout.message.success": "退出成功",
   "global_title": "喵喵App管理系统",
   "github": "Github 仓库",
   "logout": "退出登录",
