feat: asyncSelect组件完成，全局组件注册方法引入

--- a/locales/en.json
+++ b/locales/en.json
@@ -41,13 +41,16 @@
   "page.common.title.edit": "Edit",
   "page.common.title.add": "Add",
   "page.common.notice.set_url_list": "Please set the url list property",
+  "page.common.notice.set_url": "Please set the url property",
   "page.common.notice.set_url_delete": "Please set the url delete property",
   "page.common.notice.delete_success": "Delete success!",
   "page.common.notice.submit_success": "Submit success!",
   "page.common.design.article.search.title": "Title",
   "page.common.design.article.search.content": "Content",
+  "page.common.design.article.search.type": "Type",
   "page.common.design.article.search.title_placeholder": "Please Input Title",
   "page.common.design.article.search.content_placeholder": "Please Input Content",
+  "page.common.design.article.search.type_placeholder": "Please Select Type",
   "page.common.design.article.column.id": "ID",
   "page.common.design.article.column.title": "Title",
   "page.common.design.article.column.content": "Content",
