--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -41,13 +41,16 @@
   "page.common.title.edit": "编辑",
   "page.common.title.add": "新增",
   "page.common.notice.set_url_list": "请设置url.list属性",
+  "page.common.notice.set_url": "请设置url.list",
   "page.common.notice.set_url_delete": "请设置url.delete属性",
   "page.common.notice.delete_success": "删除成功！",
   "page.common.notice.submit_success": "提交成功！",
   "page.common.design.article.search.title": "标题",
   "page.common.design.article.search.content": "内容",
+  "page.common.design.article.search.type": "类别",
   "page.common.design.article.search.title_placeholder": "请输入标题",
   "page.common.design.article.search.content_placeholder": "请输入内容",
+  "page.common.design.article.search.type_placeholder": "请选择类别",
   "page.common.design.article.column.id": "ID",
   "page.common.design.article.column.title": "标题",
   "page.common.design.article.column.content": "标题",
