--- a/locales/en.json
+++ b/locales/en.json
@@ -14,6 +14,8 @@
   "router.dashboard": "Dashboard",
   "router.design": "Design",
   "router.article": "Article",
+  "router.article_remote": "Article Remote",
+  "router.remote": "Remote",
   "router.editor": "Editor",
   "router.error": "Error",
   "router.404": "Page 404",
