feat: 批量删除功能增加

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -38,7 +38,9 @@
   "page.common.btn.add": "添加",
   "page.common.btn.edit": "编辑",
   "page.common.btn.delete": "删除",
+  "page.common.btn.batchDelete": "删除",
   "page.common.btn.delete_popover": "确认删除该记录？",
+  "page.common.btn.batchDelete_popover": "确认批量删除这些记录？",
   "page.common.btn.confirm": "确认",
   "page.common.btn.cancel": "取消",
   "page.common.title.edit": "编辑",
@@ -47,6 +49,7 @@
   "page.common.notice.set_url": "请设置url.list",
   "page.common.notice.set_url_delete": "请设置url.delete属性",
   "page.common.notice.set_url_batchDelete": "请设置url.batchDelete属性",
+  "page.common.notice.empty_delete_data": "请选择要删除的记录",
   "page.common.notice.set_url_add": "请设置url.add",
   "page.common.notice.set_url_edit": "请设置url.edit",
   "page.common.notice.delete_success": "删除成功！",
