--- a/locales/en.json
+++ b/locales/en.json
@@ -69,8 +69,10 @@
   "page.common.design.article.column.action": "Action",
   "page.common.design.article.form.title": "Title",
   "page.common.design.article.form.content": "Content",
+  "page.common.design.article.form.type": "Type",
   "page.common.design.article.form.title_placeholder": "Please Input Title",
   "page.common.design.article.form.content_placeholder": "Please Input Content",
+  "page.common.design.article.form.type_placeholder": "Please Select Type",
   "page.common.dashboard.card.leaderboard": "Leaderboard",
   "page.common.dashboard.card.timeline": "Timeline",
   "page.common.dashboard.card.timeline.woops": "Woops,",
