--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -69,8 +69,10 @@
   "page.common.design.article.column.action": "操作",
   "page.common.design.article.form.title": "标题",
   "page.common.design.article.form.content": "内容",
+  "page.common.design.article.form.type": "类别",
   "page.common.design.article.form.title_placeholder": "请输入标题",
   "page.common.design.article.form.content_placeholder": "请输入内容",
+  "page.common.design.article.form.type_placeholder": "请选择类别",
   "page.common.dashboard.card.leaderboard": "排行榜",
   "page.common.dashboard.card.timeline": "时间线",
   "page.common.dashboard.card.timeline.woops": "糟糕，",
