--- a/locales/en.json
+++ b/locales/en.json
@@ -8,6 +8,8 @@
   "golbal.logout.message.confirm": "Do you confirm to exit the system?",
   "golbal.logout.message.success": "Logout successfully",
   "global_title": "Miao Miao Admin",
+  "global.history.dropdown.option.reload": "Reload",
+  "global.history.dropdown.option.closeSelf": "Close self",
   "github": "Github Pages",
   "logout": "Logout",
   "router.home": "Home",
