--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -8,6 +8,8 @@
   "golbal.logout.message.confirm": "是否确认退出系统？",
   "golbal.logout.message.success": "退出成功",
   "global_title": "喵喵App管理系统",
+  "global.history.dropdown.option.reload": "重新加载",
+  "global.history.dropdown.option.closeSelf": "关闭当前",
   "github": "Github 仓库",
   "logout": "退出登录",
   "router.home": "首页",
