--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -10,6 +10,8 @@
   "global_title": "喵喵App管理系统",
   "global.history.dropdown.option.reload": "重新加载",
   "global.history.dropdown.option.closeSelf": "关闭当前",
+  "global.history.dropdown.option.closeLeft": "关闭左侧",
+  "global.history.dropdown.option.closeRight": "关闭右侧",
   "github": "Github 仓库",
   "logout": "退出登录",
   "router.home": "首页",
