feat: 给时钟组件加一个小feature

--- a/locales/en.json
+++ b/locales/en.json
@@ -69,6 +69,11 @@
   "page.watermark.btn.delete": "Delete Watermark",
   "page.watermark.btn.reset": "Reset Watermark",
   "page.watermark.input.placeholder": "Please enter the watermark content",
+  "page.clock.title": "The time is left",
+  "page.clock.over": "The time is over !!!",
+  "page.clock.hour": "h",
+  "page.clock.minute": "m",
+  "page.clock.seconds": "s",
   "page.common.title.edit": "Edit",
   "page.common.title.add": "Add",
   "page.common.table.column.title": "Column Show",
