--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -69,6 +69,11 @@
   "page.watermark.btn.delete": "删除水印",
   "page.watermark.btn.reset": "重置水印",
   "page.watermark.input.placeholder": "请输入水印文字",
+  "page.clock.title": "离下班还有",
+  "page.clock.over": "下班了 ！！！",
+  "page.clock.hour": "小时",
+  "page.clock.minute": "分",
+  "page.clock.seconds": "秒",
   "page.common.title.edit": "编辑",
   "page.common.title.add": "新增",
   "page.common.table.column.title": "列展示",
