feat: 新增关于页面

--- a/locales/en.json
+++ b/locales/en.json
@@ -45,6 +45,7 @@
   "router.button": "Button Permission",
   "router.alive": "Keep Alive",
   "router.clock": "Clock",
+  "router.about": "About",
   "page.403.title": "403",
   "page.403.head_title": "You don't have enough clearance",
   "page.403.second_title": "But don't worry, you can go back to the main page by clicking the button below",
@@ -55,6 +56,14 @@
   "page.500.head_title": "There is a problem with the page display",
   "page.500.second_title": "But don't worry, you can go back to the main page by clicking the button below",
   "page.error.btn": "Return to the home page",
+  "page.about.intro.title": "About",
+  "page.about.info.title": "Info",
+  "page.about.info.version": "Version",
+  "page.about.info.doc": "Doc",
+  "page.about.info.preview": "Preview",
+  "page.about.info.github": "Github",
+  "page.about.dep.title": "Dependencies",
+  "page.about.dev.title": "Dev Dependencies",
   "page.common.btn.search": "Search",
   "page.common.btn.reset": "Reset",
   "page.common.btn.add": "Add",
