--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -45,6 +45,7 @@
   "router.button": "按钮权限",
   "router.alive": "组件缓存",
   "router.clock": "时钟演示",
+  "router.about": "关于",
   "page.403.title": "403",
   "page.403.head_title": "你的权限不足",
   "page.403.second_title": "不过不要担心,你可以点击下方的按钮回到主页",
@@ -55,6 +56,14 @@
   "page.500.head_title": "页面显示出现了问题",
   "page.500.second_title": "不过不要担心,你可以点击下方的按钮回到主页",
   "page.error.btn": "回到主页",
+  "page.about.intro.title": "关于",
+  "page.about.info.title": "项目信息",
+  "page.about.info.version": "版本",
+  "page.about.info.doc": "文档地址",
+  "page.about.info.preview": "预览地址",
+  "page.about.info.github": "Github仓库",
+  "page.about.dep.title": "生产环境依赖",
+  "page.about.dev.title": "开发环境依赖",
   "page.common.btn.search": "搜索",
   "page.common.btn.reset": "重置",
   "page.common.btn.add": "添加",
